Changed result/page to 30. Fixed reference spacing.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,7 @@ p, ul, ol {
 }
 p.pre
 {
+   line-height: normal;
    white-space:pre-line;
 }
 
